prevent line-break in inline translation extents

--- a/src/transliteration/ui/Transliteration.sass
+++ b/src/transliteration/ui/Transliteration.sass
@@ -175,6 +175,9 @@
 
   &__inAlignSet
     background-color: lightgrey
+  
+  &__TranslationLine--extent
+    white-space: nowrap
 
 .chapter-display__line
   .Transliteration
